--- a/packages/workers/wrangler.toml
+++ b/packages/workers/wrangler.toml
@@ -11,7 +11,8 @@ local_protocol = "http"
 [env.staging]
 name = "majibattle-staging"
 vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17" }
-# Cloudflare Secrets Store configuration
+
+# Cloudflare Secrets Store configuration - 元の形式
 secrets_store_secrets = [
   { binding = "GEMINI_SECRET", store_id = "b8ffbf7dcbf34210b9bf420d54c0fdaa", secret_name = "GEMINI_API_KEY" }
 ]
@@ -28,9 +29,9 @@ new_sqlite_classes = [ "GameSessionV2" ]
 [env.production]
 name = "majibattle"
 # Cloudflare Secrets Store configuration
-secrets_store_secrets = [
-  { binding = "GEMINI_SECRET", store_id = "b8ffbf7dcbf34210b9bf420d54c0fdaa", secret_name = "GEMINI_API_KEY" }
-]
+#secrets_store_secrets = [
+#  { binding = "GEMINI_SECRET", store_id = "b8ffbf7dcbf34210b9bf420d54c0fdaa", secret_name = "GEMINI_API_KEY" }
+#]
 vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17" }
 
 [[env.production.durable_objects.bindings]]
