--- a/packages/workers/wrangler.toml
+++ b/packages/workers/wrangler.toml
@@ -10,7 +10,7 @@ local_protocol = "http"
 # Staging environment for PR previews
 [env.staging]
 name = "majibattle-staging"
-vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17" }
+vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17", IMAGE_GENERATION_ENABLED = "true" }
 
 [[env.staging.durable_objects.bindings]]
 name = "GAME_SESSION"
@@ -23,7 +23,7 @@ new_sqlite_classes = [ "GameSessionV2" ]
 # Production environment
 [env.production]
 name = "majibattle"
-vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17" }
+vars = { GEMINI_MODEL = "gemini-2.5-flash-lite-preview-06-17", IMAGE_GENERATION_ENABLED = "true" }
 
 [[env.production.durable_objects.bindings]]
 name = "GAME_SESSION"
